fix: harden PostgreSQL migration reconciliation